--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -36,11 +36,9 @@
 
 
 .filtersContainer {
-    padding: 10px;
-    /*background-color: #f3f3f3 !important;*/
+    padding: 30px 10px 10px 10px;
+    position: relative;
     .filterName {
-/*        width: 100%;
-        text-align: center;*/
         margin-top: 15px;
         margin-bottom: 10px;
         border-radius: 3px;
@@ -49,8 +47,13 @@
     .filterHeader {
         font-size: 16px;
         font-weight: 600;
-        text-align: center;
-        margin-bottom: 10px;
+        position: absolute;
+        top: -14px;
+        background: #f2f2f1;
+        border-radius: 10px;
+        line-height: 36px;
+        padding: 0 10px;
+        box-shadow: 0 1px 0 0 #d7d8db;
     }
     .filterCheckBox {
         border-top: 1px solid #b7b7b7;
